	PR ld/12760 	* plugin.c (plugin_notice): Set u.undef.abfd for symbols made 	undefweak.